--- a/index.html
+++ b/index.html
@@ -36,5 +36,44 @@
             </div>
         </div>
     </header>
+
+    <main>
+        <section class="intro smaller-container">
+            <h2>Some Random Information.</h2>
+            <div class="box-container">
+                <div class="box">
+                    <div class="image"></div>
+                    <div class="box-text">
+                        This is some subtext under an illustration or image.
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="image"></div>
+                    <div class="box-text">
+                        This is some subtext under an illustration or image.
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="image"></div>
+                    <div class="box-text">
+                        This is some subtext under an illustration or image.
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="image"></div>
+                    <div class="box-text">
+                        This is some subtext under an illustration or image.
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="testimony">
+            <blockquote class="smaller-container">
+                <p>This is an inspiring quote, or a testimonal from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+                <footer>-Thor, God of Thunder</footer>
+            </blockquote>
+        </section>
+    </main>
 </body>
 </html>
