--- a/index.html
+++ b/index.html
@@ -74,6 +74,18 @@
                 <footer>-Thor, God of Thunder</footer>
             </blockquote>
         </section>
+
+        <section class="cta">
+            <div class="smaller-container">
+                <div class="cta-text">
+                    <h3>Call to action!</h3>
+                    <p>Sign up for updates on our project!</p>
+                </div>
+                <div class="cta-btn">
+                    <button>Sign up</button>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
