--- a/index.html
+++ b/index.html
@@ -6,16 +6,27 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-
+    <link rel= "stylesheet" href= "https://maxst.icons8.com/vue-static/landings/line-awesome/font-awesome-line-awesome/css/all.min.css" >
+    
     <link rel="stylesheet" href="styles.css">
     <title>Welcome!</title>
 </head>
 <body>
+
+    <div class="mob-menu hidden">
+        <div id="mob-close">X</div>
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Contact</a></li>
+        </ul>        
+    </div>
     <header>
         <nav class="container header-nav">
             <div class="nav-left">
                 <p class="logo">header logo</p>
             </div>
+            <p class="nav-toggle" id="toggler">Menu</p>
             <div class="nav-right">
                 <ul>
                     <li><a href="">Home</a></li>
@@ -87,5 +98,11 @@
             </div>
         </section>
     </main>
+
+    <footer>
+        Copyright &copy; The Odin Project 2024
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
