--- a/index.html
+++ b/index.html
@@ -38,42 +38,50 @@
 
         <div class="header-main container">
             <div class="header-text">
-                <h1>This website is awesome</h1>
+                <h1>This website is PAWsome</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus eaque sunt eveniet totam magnam recusandae, vero tenetur, optio quia voluptas quas dignissimos corporis saepe odio. Culpa quam cupiditate ipsum harum?</p>
                 <button>Sign Up</button>
             </div>
             <div class="header-img">
-                <img src="dog.jpg">
+                <img src="imgs/dog.jpg">
             </div>
         </div>
     </header>
 
     <main>
         <section class="intro smaller-container">
-            <h2>Some Random Information.</h2>
+            <h2>Some Random Doggos.</h2>
             <div class="box-container">
                 <div class="box">
-                    <div class="image"></div>
+                    <div class="image">
+                        <img src="imgs/dog1.jpg">
+                    </div>
                     <div class="box-text">
-                        This is some subtext under an illustration or image.
+                        Hello there, my name is Rufus!
                     </div>
                 </div>
                 <div class="box">
-                    <div class="image"></div>
+                    <div class="image">
+                        <img src="imgs/dog2.jpg">
+                    </div>
                     <div class="box-text">
-                        This is some subtext under an illustration or image.
+                        Woof! I'm Rex!
                     </div>
                 </div>
                 <div class="box">
-                    <div class="image"></div>
+                    <div class="image">
+                        <img src="imgs/dog3.jpg">
+                    </div>
                     <div class="box-text">
-                        This is some subtext under an illustration or image.
+                        The name is Reginald, thank you very much.
                     </div>
                 </div>
                 <div class="box">
-                    <div class="image"></div>
+                    <div class="image">
+                        <img src="imgs/dog4.jpg">
+                    </div>
                     <div class="box-text">
-                        This is some subtext under an illustration or image.
+                        Norman.
                     </div>
                 </div>
             </div>
