--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel= "stylesheet" href= "https://maxst.icons8.com/vue-static/landings/line-awesome/font-awesome-line-awesome/css/all.min.css" >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="styles.css">
     <title>Welcome!</title>
@@ -24,7 +27,7 @@
     <header>
         <nav class="container header-nav">
             <div class="nav-left">
-                <p class="logo">header logo</p>
+                <p class="logo">tamper coffee</p>
             </div>
             <p class="nav-toggle" id="toggler">Menu</p>
             <div class="nav-right">
@@ -38,50 +41,51 @@
 
         <div class="header-main container">
             <div class="header-text">
-                <h1>This website is PAWsome</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus eaque sunt eveniet totam magnam recusandae, vero tenetur, optio quia voluptas quas dignissimos corporis saepe odio. Culpa quam cupiditate ipsum harum?</p>
-                <button>Sign Up</button>
+                <h1>Tamper Coffee</h1>
+                <p><span>Est. 2014</span></p>
+                <p>The best coffee shop in Manchester's northern quarter (As voted for by readers of The Guardian). Why not come and try for yourself?</p>
+                <button>Find Us</button>
             </div>
             <div class="header-img">
-                <img src="imgs/dog.jpg">
+                <img src="imgs/header.jpg">
             </div>
         </div>
     </header>
 
     <main>
         <section class="intro smaller-container">
-            <h2>Some Random Doggos.</h2>
+            <h2>What We Offer</h2>
             <div class="box-container">
                 <div class="box">
                     <div class="image">
-                        <img src="imgs/dog1.jpg">
+                        <img src="imgs/coffee.jpg">
                     </div>
                     <div class="box-text">
-                        Hello there, my name is Rufus!
+                        Organic coffee from South America.
                     </div>
                 </div>
                 <div class="box">
                     <div class="image">
-                        <img src="imgs/dog2.jpg">
+                        <img src="imgs/danish.jpg">
                     </div>
                     <div class="box-text">
-                        Woof! I'm Rex!
+                        Delicious local handmade pastries.
                     </div>
                 </div>
                 <div class="box">
                     <div class="image">
-                        <img src="imgs/dog3.jpg">
+                        <img src="imgs/cafe.jpg">
                     </div>
                     <div class="box-text">
-                        The name is Reginald, thank you very much.
+                        A cozy modern environment to relax and chat or study.
                     </div>
                 </div>
                 <div class="box">
                     <div class="image">
-                        <img src="imgs/dog4.jpg">
+                        <img src="imgs/barista.jpg">
                     </div>
                     <div class="box-text">
-                        Norman.
+                        The best service in the North West!
                     </div>
                 </div>
             </div>
@@ -89,16 +93,16 @@
 
         <section class="testimony">
             <blockquote class="smaller-container">
-                <p>This is an inspiring quote, or a testimonal from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-                <footer>-Thor, God of Thunder</footer>
+                <p>Honestly, not just the best coffee in the North East, not even in the UK but I think in the world! Don't miss out. Cozy surroundings, the friendliest service and delicious coffee, what more do you want?</p>
+                <footer>-The Coffee Connoisseur, The Guardian</footer>
             </blockquote>
         </section>
 
         <section class="cta">
             <div class="smaller-container">
                 <div class="cta-text">
-                    <h3>Call to action!</h3>
-                    <p>Sign up for updates on our project!</p>
+                    <h3>Keep Up-To-Date On What's Going On!</h3>
+                    <p>We're always holding events and updating our offerings. Don't miss out, sign up today!</p>
                 </div>
                 <div class="cta-btn">
                     <button>Sign up</button>
@@ -108,7 +112,7 @@
     </main>
 
     <footer>
-        Copyright &copy; The Odin Project 2024
+        Copyright &copy; Tamper Coffee 2024
     </footer>
 
     <script src="script.js"></script>
